--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -7,6 +7,9 @@
     color: white;
     
 }
+.burger{
+    display: none;
+}
 .nav a {
     text-decoration: none;
     color: white;
@@ -42,19 +45,282 @@
     font-weight: 900;
 }
 
-.nav button {
+.logout {
     border: none;
     background-color:#FF5569 ;
     border-radius: 40px;
-    padding:7px 50px;
+    padding:9px 20px;
     color: white;
     font-size: 30px;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-right: 24px;
+   align-self: center;
     border: solid 1px #FF5569;
     transition: 0.3s;
 }
 .nav button:hover{
     cursor:pointer;
     background-color: transparent;
+}
+.burger:hover{
+    cursor: pointer;
+}
+
+#burger {
+    display: none;
+}
+@media screen and (max-width: 1700px) {
+   
+    .nav li {
+        font-size: 23px;
+    }
+    .nav ul {
+        margin-right: 10px;
+    }
+} 
+
+@media screen and (max-width: 1600px) {
+   
+    .header-desc h1 {
+        font-size: 65px;
+    }
+    .header img{
+        width: 460px;
+        height: 460px;
+    }
+} 
+.item-nav {
+    width: 20px;
+    height: 2px;
+    margin: 5px;
+    background-color: rgb(255, 255, 255);
+    transition: 0.3s;
+}
+
+@media screen and (max-width: 1280px) {
+   .subtitle-service{
+       font-size: 50px!important;
+   }
+   .subtitle-menu{
+    font-size: 50px!important;
+}
+    
+    .nav{
+        margin-top: 10px;
+        align-items: flex-start;
+        z-index: 3;
+        background-color: rgb(71, 71, 71);
+        padding: 10px;
+        border-radius: 10px;
+        position: fixed;
+        width:77vw
+        
+    }
+    .logo {
+        margin: 0;
+        font-size: 50px;
+    }
+   .burger{
+       display: block;
+       order:1;
+       margin-top: 10px;
+       margin-right: 15px;
+   }
+   .navList{
+       display: none;
+      padding: 0px;
+      margin:50px 0px!important;
+        flex-direction: column;
+        text-align: center;
+        
+        
+    
+   }
+
+   .burger{
+    margin-top: 30px;
+    margin-right: 15px;
+    
+    order:1;
+   }
+
+   #burger:checked + .navList {
+    display:flex;
+    align-self: center;
+    margin-top: 50px;
+    
+    z-index: 3;
+    
+}
+.header-desc h1{
+    font-size: 50px;
+}
+
+.header img {
+    margin-top: 150px;
+}
+
+.header img{
+    width: 380px;
+    height: 380px;
+}
+.header-desc p {
+    font-size: 25px;
+}
+} 
+
+@media screen and (max-width: 968px) {
+
+    .header-desc h1{
+        font-size: 40px;
+    }
+    .header img {
+        width: 300px;
+        height: 300px;
+    }
+
+}
+@media screen and (max-width: 968px) {
+    .header-desc h1{
+        font-size: 50px;
+    }
+    .header img {
+        width: 200px;
+        height: 200px;
+        position: absolute;
+        margin-top: 30px;
+        z-index: -1;
+        opacity: 0.6;
+        left: 50%;
+        transform: translate(-50%);
+    }
+    .header-desc button{
+        margin-top: 50px;
+    }
+    .our-service, .our-menu{
+        margin-top: 0;
+        margin-bottom: 0!important;
+    }
+    .service{
+        flex-direction: column;
+        margin-top: 100px!important;
+    }
+    .single-service{
+        margin: 40px;
+    }
+    .menu-title{
+        margin-top: 100px;
+    }
+    .single-food{
+        width: 300px;
+        height: 300px;
+    }
+    .single-food img {
+        width: 150px;
+        height: 150px;
+    }
+    .add{
+        top:240px;
+        width: 60px;
+        height: 60px;
+        right: 60px;
+    }
+    .food-name{
+        font-size: 23px;
+    }
+    .food-description{
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 864px) {
+
+    .single-category label{
+        width: 90px;
+        font-size: 25px ;
+    }
+    .cart{
+        width: 150px!important;
+        font-size: 14px!important;
+        overflow-x: hidden;
+    }
+    .cart-item img{
+        width: 35px;
+        height: 35px;
+    }
+    .total-price{
+        font-size: 18px;
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+
+    .single-category label{
+        width: 60px;
+        font-size: 18px ;
+    }
+    .single-category label img {
+        height: 40px;
+        width: 40px;
+    }
+
+    .single-food{
+        width: 210px;
+        height: 210px;
+    }
+    .single-food img {
+        width: 100px;
+        height: 150px;
+    }
+    .add{
+        top:180px;
+        width: 50px;
+        height: 50px;
+        right: 50px;
+        font-size:40px ;
+    }
+    .food-name{
+        font-size: 18px;
+    }
+    .food-description{
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+
+    .logo{
+        font-size: 35px;
+    }
+    .burger{
+        margin-top: 15px;
+    }
+    .header-desc h1{
+        font-size: 40px;
+    }
+    .subtitle-service, .subtitle-menu{
+        font-size: 40px!important;
+    }
+    .our-menu, .our-service{
+        font-size: 30px!important;
+    }
+}
+
+@media screen and (max-width: 500px) {
+
+    .single-category{
+        padding: 6px!important;
+    }
+    .logo{
+        font-size: 30px;
+    }
+    .nav li {
+        padding: 25px 10px;
+    }
+    .food-category{
+        margin-bottom: 300px;
+    }
+    .single-food{
+        margin: 30px 10px;
+    }
 }
