--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -7,7 +7,7 @@ body{
   
 }
 .container {
-    max-width: 1420px;
+    max-width: 74vw;
     margin: auto;
 }
 
@@ -17,3 +17,11 @@ button{
 *{
     animation: popIn 0.5s;
 }
+
+/* 
+@media screen and (max-width: 1200px) {
+    .container {
+        max-width: 1000px;
+        
+    }
+} */
