--- a/client/src/components/upPage/uppage.css
+++ b/client/src/components/upPage/uppage.css
@@ -3,11 +3,12 @@
     position: fixed;
     color: white;
     bottom: 20px;
-    
+    font-weight: 700;
+    font-size: 25px;
     border-radius: 50%;
     background-color: #FF5569;
-    height: 50px;
-    width: 50px;
+    height: 45px;
+    width: 45px;
    display: flex;
    left:100px;
    justify-content: center;
